# stanby-tech-book-vol1

./: README.md
10_rust_grpc_server/: README.md
10_rust_grpc_server/rust-grpc-server/: Cargo.toml  Taskfile.yaml
10_rust_grpc_server/rust-grpc-server/proto/: user.proto
10_rust_grpc_server/rust-grpc-server/src/: lib.rs  main.rs  trace.rs
10_rust_grpc_server/rust-grpc-server/src/middleware/: mod.rs  sample_interceptor.rs
10_rust_grpc_server/rust-grpc-server/src/services/: user_service.rs
10_rust_grpc_server/rust-grpc-server/src/tonic_build_gen/: mod.rs  user.v1.rs
10_rust_grpc_server/rust-grpc-server/tools/grpc_codegen/: Cargo.toml
10_rust_grpc_server/rust-grpc-server/tools/grpc_codegen/src/: main.rs
11_vespa_splade/: .gitignore  README.md  docker-compose.yml
11_vespa_splade/.devcontainer/: Dockerfile  devcontainer.json  postCreateCommand.sh
11_vespa_splade/vespa-components/japanese-analyzer/: pom.xml
11_vespa_splade/vespa-components/token-weakand-searcher/: pom.xml
11_vespa_splade/vespa-config/: services.xml
11_vespa_splade/vespa_search_compare/: README.md  args_parser.py  config.py  config.yaml  logger.py  main.py  pyproject.toml
11_vespa_splade/vespa_search_compare/evaluator/: evaluator.py  load_data.py  runner.py
11_vespa_splade/vespa_search_compare/feeder/: vespa_feeder.py
11_vespa_splade/vespa_search_compare/searcher/: vespa_searcher.py
11_vespa_splade/vespa_search_compare/splade/: encoder.py
8_vespa_language_server_for_neovim/: .gitignore  README.md
8_vespa_language_server_for_neovim/schemas/: blog.sd
(+6 files in other folders)
